Wed Jun  1 08:27:26 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_ShapeType_msg.mpc:
          Fixed export macro for OpenDDS

Wed Jun  1 01:56:05 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/Executor-Destructor/Exec_Dest_Status.h:
        * tests/DAnCE/Executor-Destructor/Exec_Dest_Status.cpp:
        * tests/DAnCE/Executor-Destructor/Exec_Dest_Status_export.h:
        * tests/DAnCE/Executor-Destructor/Executor_Destructor.mpc:
        * tests/DAnCE/Executor-Destructor/Executor_Destructor_Interceptor.cpp:

          Fix for bugzilla 3963.  On certain platforms (e.g., FC15), when
        a library which is dlopened links another library which is
        dlopened, this may cause spurious error messages upon exit
        exit of the LocalityManager from ld.so.

Tue May 31 12:27:54 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/VariousTopicsEvent/Base/VTopic_Base.idl:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_Union/VT_Union_Connector.idl:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Conn_Valuetype/VT_Valuetype_Connector.idl:
        * connectors/dds4ccm/tests/VariousTopicsState/Base/VTopics_Base.idl:
        * connectors/dds4ccm/tests/VariousTopicsState/Conn_Union/VTS_Union_Connector.idl:
        * connectors/dds4ccm/tests/VariousTopicsState/Conn_Valuetype/VTS_Valuetype_Connector.idl:
          Disable some parts for opendds

Tue May 31 08:56:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/VariousTopicsEvent/Base/VTopic_Base.idl:
        * connectors/dds4ccm/tests/VariousTopicsState/Base/VTopics_Base.idl:
          OpenDDS doesn't support a topic with a valuetype member

Mon May 30 12:07:40 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Removed unused ACE_ARG_UNUSED.
